--- a/CiscoTopo/project-files/dynamips/4f3218ad-2360-47e0-8c92-8944dfdfc6a5/configs/i3_startup-config.cfg
+++ b/CiscoTopo/project-files/dynamips/4f3218ad-2360-47e0-8c92-8944dfdfc6a5/configs/i3_startup-config.cfg
@@ -1,29 +1,169 @@
 !
+
 !
+! Last configuration change at 22:44:56 UTC Tue Sep 3 2019
 !
-!
+version 15.2
 service timestamps debug datetime msec
 service timestamps log datetime msec
-no service password-encryption
 !
 hostname c7200-5
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+!
+no aaa new-model
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
-no cdp log mismatch duplex
+!
+!
+!
+!
+!
+!
+no ip domain lookup
+ip domain name tinychen.com
+ip cef
+no ipv6 cef
+!
+!
+multilink bundle-name authenticated
+!
+!
+!
+!
+!
+!
+!
+username tinychen password 0 easy1234
+!
+!
+!
+!
+!
+ip tcp synwait-time 5
+ip ssh version 2
+! 
+!
+!
+!
+!
+!
+!
+!
+!
+interface FastEthernet0/0
+ no ip address
+ shutdown
+ duplex full
+!
+interface FastEthernet2/0
+ no ip address
+ shutdown
+ duplex full
+!
+interface FastEthernet3/0
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface FastEthernet3/1
+ no ip address
+ shutdown
+ speed auto
+ duplex auto
+!
+interface GigabitEthernet4/0
+ ip address 192.168.126.5 255.255.255.0
+ negotiation auto
+!
+interface Serial5/0
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial5/1
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial5/2
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial5/3
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial5/4
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial5/5
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial5/6
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial5/7
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Ethernet6/0
+ no ip address
+ shutdown
+ duplex full
+!
+interface Ethernet6/1
+ no ip address
+ shutdown
+ duplex full
+!
+interface Ethernet6/2
+ no ip address
+ shutdown
+ duplex full
+!
+interface Ethernet6/3
+ no ip address
+ shutdown
+ duplex full
+!
+ip forward-protocol nd
+!
+!
+no ip http server
+no ip http secure-server
+!
+!
+!
+!
+control-plane
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+ stopbits 1
+line vty 0 4
+ login local
+ transport input ssh
 !
 !
 end
