--- a/CiscoTopo/project-files/dynamips/ff46c4e8-42bb-4461-aca1-8db24fda13c2/configs/i6_startup-config.cfg
+++ b/CiscoTopo/project-files/dynamips/ff46c4e8-42bb-4461-aca1-8db24fda13c2/configs/i6_startup-config.cfg
@@ -1,28 +1,184 @@
 !
+
 !
-!
+version 12.4
 service timestamps debug datetime msec
 service timestamps log datetime msec
 no service password-encryption
 !
 hostname c3745-10
 !
-ip cef
-no ip domain-lookup
+boot-start-marker
+boot-end-marker
+!
+!
+no aaa new-model
+memory-size iomem 5
 no ip icmp rate-limit unreachable
-ip tcp synwait 5
+ip cef
+!
+!
+!
+!
+no ip domain lookup
+ip domain name tinychen.com
+ip auth-proxy max-nodata-conns 3
+ip admission max-nodata-conns 3
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+username tinychen password 0 easy1234
+!
+!
+ip tcp synwait-time 5
+ip ssh version 2
+! 
+!
+!
+!
+!
+interface FastEthernet0/0
+ ip address 192.168.126.10 255.255.255.0
+ duplex auto
+ speed auto
+!
+interface Serial0/0
+ no ip address
+ shutdown
+ clock rate 2000000
+!
+interface FastEthernet0/1
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface Serial0/1
+ no ip address
+ shutdown
+ clock rate 2000000
+!
+interface Serial0/2
+ no ip address
+ shutdown
+ clock rate 2000000
+!
+interface Serial0/3
+ no ip address
+ shutdown
+ clock rate 2000000
+!
+interface FastEthernet1/0
+ no ip address
+ shutdown
+ duplex auto
+ speed auto
+!
+interface Serial2/0
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial2/1
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial2/2
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface Serial2/3
+ no ip address
+ shutdown
+ serial restart-delay 0
+!
+interface FastEthernet3/0
+!
+interface FastEthernet3/1
+!
+interface FastEthernet3/2
+!
+interface FastEthernet3/3
+!
+interface FastEthernet3/4
+!
+interface FastEthernet3/5
+!
+interface FastEthernet3/6
+!
+interface FastEthernet3/7
+!
+interface FastEthernet3/8
+!
+interface FastEthernet3/9
+!
+interface FastEthernet3/10
+!
+interface FastEthernet3/11
+!
+interface FastEthernet3/12
+!
+interface FastEthernet3/13
+!
+interface FastEthernet3/14
+!
+interface FastEthernet3/15
+!
+interface Vlan1
+ no ip address
+!
+ip forward-protocol nd
+!
+!
+no ip http server
+no ip http secure-server
+!
 no cdp log mismatch duplex
+!
+!
+!
+control-plane
+!
+!
+!
+!
+!
+!
+!
+!
+!
+!
+gatekeeper
+ shutdown
+!
 !
 line con 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
 line aux 0
  exec-timeout 0 0
- logging synchronous
  privilege level 15
- no login
+ logging synchronous
+line vty 0 4
+ login local
+ transport input ssh
 !
 !
 end
